@@ -2,7 +2,7 @@
 .\"  This page Copyright (C) 1993 Matt Welsh, mdw@sunsite.unc.edu.
 .\"  Long options where added at April 15th, 2011.
 .\"  Freely distributable under the terms of the GPL
-.TH FREE 1 "Jul 2016" "procps-ng" "User Commands"
+.TH FREE 1 "2016-06-03" "procps-ng" "User Commands"
 .SH NAME
 free \- Display amount of free and used memory in the system
 .SH SYNOPSIS
@@ -110,11 +110,10 @@ option.
 \fB\-l\fR, \fB\-\-lohi\fR
 Show detailed low and high memory statistics.
 .TP
-\fB\-s\fR, \fB\-\-seconds\fR \fIseconds\fR
-Continuously display the result delay
-.I seconds
+\fB\-s\fR, \fB\-\-seconds\fR \fIdelay\fR
+Continuously display the result \fIdelay\fR  seconds
 apart.  You may actually specify any floating point number for
-.IR delay ,
+\fIdelay\fR using either . or , for decimal point.
 .BR usleep (3)
 is used for microsecond resolution delay times.
 .TP
